minor issue resolved related to archival process implementation using NIS engine

--- a/API/Web.config
+++ b/API/Web.config
@@ -60,7 +60,7 @@
     <!--<add key="TenantSQLStorageAccount" value="Data Source=nis.database.windows.net;Initial Catalog=nisProd;User ID=nis_admin;Password=Gauch022$" />-->
 
     <add key="DefaultGenerateStatementApiUrl" value="http://127.0.0.1/GenerateStatementRenderEngine/" />
-    <add key="ThreadCountToGenerateStatementParallel" value="5" />
+    <add key="ThreadCountToGenerateStatementParallel" value="2" />
     <add key="MinimumArchivalPeriodDays" value="30" />
   </appSettings>
   
@@ -147,10 +147,10 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
 
-    <!--<staticContent>
+    <staticContent>
       <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
       <mimeMap fileExtension=".json" mimeType="application/json" />
-    </staticContent>-->
+    </staticContent>
 
     <security>
       <requestFiltering>
