--- a/API/API.csproj
+++ b/API/API.csproj
@@ -279,6 +279,7 @@
     <Compile Include="Controllers\AnalyticsDataController.cs" />
     <Compile Include="Controllers\ArchivalProcessController.cs" />
     <Compile Include="Controllers\ClientController.cs" />
+    <Compile Include="Controllers\GenerateStatementController.cs" />
     <Compile Include="Controllers\PageTypeController.cs" />
     <Compile Include="Controllers\ContactTypeController.cs" />
     <Compile Include="Controllers\DynamicWidgetController.cs" />
