--- a/API/Web.config
+++ b/API/Web.config
@@ -12,10 +12,10 @@
   <connectionStrings>
 
     <!-- for Local Server -->
-    <!--<add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_012;Initial Catalog=NISTest;User ID=sa;Password=Admin@123" />-->
+    <add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_008;Initial Catalog=NIS;User ID=nis_admin;Password=Websym@123" />
 
     <!-- for QA Server -->
-    <add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />
+    <!--<add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />-->
 
     <!--<add name="TenantManagerConnectionString" connectionString="{{DataBaseConnectionString}}" />-->
 
@@ -51,17 +51,19 @@
     <!--Teanant setup  -->
 
     <!-- for Local Server -->
-    <!--<add key="TenantSQLStorageAccount" value="Data Source=WSPL_LAP_008;Initial Catalog=nisProd;User ID=nis_admin;Password=Websym@123" />-->
+    <add key="TenantSQLStorageAccount" value="Data Source=WSPL_LAP_008;Initial Catalog=NIS;User ID=nis_admin;Password=Websym@123" />
 
     <!-- for QA Server -->
-    <add key="TenantSQLStorageAccount" value="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />
+    <!--<add key="TenantSQLStorageAccount" value="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />-->
 
     <!-- for PRD Server -->
     <!--<add key="TenantSQLStorageAccount" value="Data Source=nis.database.windows.net;Initial Catalog=nisProd;User ID=nis_admin;Password=Gauch022$" />-->
 
-    <add key="DefaultGenerateStatementApiUrl" value="http://127.0.0.1/GenerateStatementRenderEngine/" />
-    <add key="ThreadCountToGenerateStatementParallel" value="2" />
+    <add key="DefaultNisEngineBaseUrl" value="http://localhost/API/" />
+    <add key="ParallelThreadCount" value="8" />
     <add key="MinimumArchivalPeriodDays" value="30" />
+    <add key="IsWantToUseNisEngines" value="FALSE" />
+    
   </appSettings>
   
   <system.web>
