--- a/GenerateStatementRenderEngine/Web.config
+++ b/GenerateStatementRenderEngine/Web.config
@@ -12,8 +12,11 @@
 
   <connectionStrings>
 
+    <!-- for Local Server -->
+    <add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_008;Initial Catalog=NIS;User ID=nis_admin;Password=Websym@123" />
+    
     <!-- for QA Server -->
-    <add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />
+    <!--<add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />-->
 
     <!-- for PRD Server -->
     <!--<add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=nisProd;User ID=nis_admin;Password=Gauch022$" />-->
