pdf crowd api credntials move in to web.config and other minor changes

--- a/API/Web.config
+++ b/API/Web.config
@@ -39,6 +39,10 @@
     <add key="EnableSSL" value="true" />
     <add key="SMTPServer" value="smtp.gmail.com" />
     <add key="SMTPPort" value="587" />
+    
+    <!-- PDF Crowd API crednetials (Replace these values once lincese purchase for each client) --> 
+    <add key="PdfCrowdUserName" value="demo" />
+    <add key="PdfCrowdApiKey" value="ce544b6ea52a5621fb9d55f8b542d14d" />
 
     <!-- for PRD Server -->
     <!--<add key="ChangePasswordLink" value="https://nis-app.azurewebsites.net/confirmuser?token=" />-->
