--- a/API/Web.config
+++ b/API/Web.config
@@ -12,12 +12,12 @@
   <connectionStrings>
 
     <!-- for Local Server -->
-    <add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_008;Initial Catalog=NIS;User ID=nis_admin;Password=Websym@123" />
+    <!--<add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_008;Initial Catalog=NIS;User ID=nis_admin;Password=Websym@123" />-->
 
     <!-- for QA Server -->
     <!--<add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />-->
 
-    <!--<add name="TenantManagerConnectionString" connectionString="{{DataBaseConnectionString}}" />-->
+    <add name="TenantManagerConnectionString" connectionString="{{DataBaseConnectionString}}" />
 
     <!-- for PRD Server -->
     <!--<add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=nisProd;User ID=nis_admin;Password=Gauch022$" />-->
@@ -47,15 +47,17 @@
     <!-- for PRD Server -->
     <!--<add key="ChangePasswordLink" value="https://nis-app.azurewebsites.net/confirmuser?token=" />-->
 
-    <!--<add key="ChangePasswordLink" value="http://localhost:{{APPPORTNO}}/confirmuser?token=" />-->
+    <add key="ChangePasswordLink" value="http://localhost:{{APPPORTNO}}/confirmuser?token=" />
 
     <!-- for QA Server -->
-    <add key="ChangePasswordLink" value="http://nisqa-app.azurewebsites.net/confirmuser?token=" />
+    <!--<add key="ChangePasswordLink" value="http://nisqa-app.azurewebsites.net/confirmuser?token=" />-->
 
     <!--Teanant setup  -->
 
     <!-- for Local Server -->
-    <add key="TenantSQLStorageAccount" value="Data Source=WSPL_LAP_008;Initial Catalog=NIS;User ID=nis_admin;Password=Websym@123" />
+    <!--<add key="TenantSQLStorageAccount" value="Data Source=WSPL_LAP_008;Initial Catalog=NIS;User ID=nis_admin;Password=Websym@123" />-->
+
+    <add key="TenantSQLStorageAccount" value="{{DataBaseConnectionString}}" />
 
     <!-- for QA Server -->
     <!--<add key="TenantSQLStorageAccount" value="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />-->
@@ -63,7 +65,8 @@
     <!-- for PRD Server -->
     <!--<add key="TenantSQLStorageAccount" value="Data Source=nis.database.windows.net;Initial Catalog=nisProd;User ID=nis_admin;Password=Gauch022$" />-->
 
-    <add key="DefaultNisEngineBaseUrl" value="http://localhost/API/" />
+    <!--<add key="DefaultNisEngineBaseUrl" value="http://localhost/API/" />-->
+    <add key="DefaultNisEngineBaseUrl" value="http://localhost:{{APPPORTNO}}/" />
     <add key="ParallelThreadCount" value="8" />
     <add key="MinimumArchivalPeriodDays" value="30" />
     <add key="IsWantToUseNisEngines" value="FALSE" />
