--- a/API/API.csproj
+++ b/API/API.csproj
@@ -320,11 +320,13 @@
     <None Include="Properties\PublishProfiles\nisqa-api - FTP2.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - FTP3.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - FTP4.pubxml" />
+    <None Include="Properties\PublishProfiles\nisqa-api - FTP5.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - ReadOnly - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - ReadOnly - FTP1.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - ReadOnly - FTP2.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - ReadOnly - FTP3.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - ReadOnly - FTP4.pubxml" />
+    <None Include="Properties\PublishProfiles\nisqa-api - ReadOnly - FTP5.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - Web Deploy.pubxml" />
     <Content Include="Properties\webjobs-list.json" />
     <Content Include="Resources\fonts\fontawesome-webfont.eot" />
@@ -341,6 +343,7 @@
     <None Include="Properties\PublishProfiles\nisqa-api - Web Deploy2.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - Web Deploy3.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - Web Deploy4.pubxml" />
+    <None Include="Properties\PublishProfiles\nisqa-api - Web Deploy5.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
