statement preview changes and mark pro font added also other minor changes

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -252,7 +252,9 @@
     <Content Include="Resources\css\ltr.css" />
     <Content Include="Resources\fonts\fontawesome-webfont.svg" />
     <Content Include="Resources\images\absa-logo.png" />
+    <Content Include="Resources\images\eConfirm.png" />
     <Content Include="Resources\images\logo.png" />
+    <Content Include="Resources\images\NEDBANKLogo.png" />
     <Content Include="Resources\images\nisLogo.png" />
     <Content Include="Resources\js\accessibility.js" />
     <Content Include="Resources\js\bootstrap.min.js" />
@@ -344,6 +346,9 @@
     <None Include="Properties\PublishProfiles\nisqa-api - Web Deploy3.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - Web Deploy4.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - Web Deploy5.pubxml" />
+    <Content Include="Resources\fonts\MARKPRO.woff" />
+    <Content Include="Resources\fonts\MARKPROBOLD.woff" />
+    <Content Include="Resources\fonts\MARKPROMEDIUM.woff" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
