--- a/API/Web.config
+++ b/API/Web.config
@@ -12,10 +12,10 @@
   <connectionStrings>
 
     <!-- for Local Server -->
-    <add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_008;Initial Catalog=NIS;User ID=nis_admin;Password=Websym@123" />
+    <!--<add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_008;Initial Catalog=NIS;User ID=nis_admin;Password=Websym@123" />-->
 
     <!-- for QA Server -->
-    <!--<add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />-->
+    <add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />
 
     <!--<add name="TenantManagerConnectionString" connectionString="{{DataBaseConnectionString}}" />-->
 
