--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -177,6 +177,10 @@
     <Compile Include="TransactionData\Nedbank\DM_InvestmentMaster.cs" />
     <Compile Include="TransactionData\Nedbank\DM_InvestmentTransaction.cs" />
     <Compile Include="TransactionData\Nedbank\DM_MarketingMessage.cs" />
+    <Compile Include="TransactionData\Nedbank\DM_PersonalLoanArrears.cs" />
+    <Compile Include="TransactionData\Nedbank\DM_PersonalLoanMaster.cs" />
+    <Compile Include="TransactionData\Nedbank\DM_PersonalLoanTransaction.cs" />
+    <Compile Include="TransactionData\Nedbank\SpecialMessage.cs" />
     <Compile Include="TransactionData\StatementMetadata.cs" />
     <Compile Include="TransactionData\SubscriptionMaster.cs" />
     <Compile Include="TransactionData\SubscriptionSpend.cs" />
