home loan statement generation process added

--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -124,6 +124,7 @@
     <Compile Include="ScheduleLogDetailSearchParameter.cs" />
     <Compile Include="ScheduleLogErrorDetail.cs" />
     <Compile Include="ScheduleRunHistory.cs" />
+    <Compile Include="Search Parameter\CustomerHomeLoanSearchParameter.cs" />
     <Compile Include="Search Parameter\CustomerInvestmentSearchParameter.cs" />
     <Compile Include="Search Parameter\CustomerPersonalLoanSearchParameter.cs" />
     <Compile Include="Search Parameter\MessageAndNoteSearchParameter.cs" />
