View Html and Export to PDF buttons added in Log details screen

--- a/API/Web.config
+++ b/API/Web.config
@@ -65,8 +65,10 @@
     <!-- for PRD Server -->
     <!--<add key="TenantSQLStorageAccount" value="Data Source=nis.database.windows.net;Initial Catalog=nisProd;User ID=nis_admin;Password=Gauch022$" />-->
 
-    <add key="DefaultNisEngineBaseUrl" value="http://nisqa-api.azurewebsites.net/" />
-    <!--<add key="DefaultNisEngineBaseUrl" value="http://localhost/API/" />-->
+    <!--<add key="DefaultNisEngineBaseUrl" value="http://nisqa-api.azurewebsites.net/" />-->
+    <add key="DefaultNisEngineBaseUrl" value="http://localhost/API/" />
+    <!--<add key="WebApiBaseUrl" value="http://nisqa-api.azurewebsites.net/" />-->
+    <add key="WebApiBaseUrl" value="http://localhost/API/" />
     <add key="ParallelThreadCount" value="8" />
     <add key="MinimumArchivalPeriodDays" value="30" />
     <add key="IsWantToUseNisEngines" value="FALSE" />
@@ -156,10 +158,10 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
 
-    <staticContent>
+    <!--<staticContent>
       <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
       <mimeMap fileExtension=".json" mimeType="application/json" />
-    </staticContent>
+    </staticContent>-->
 
     <security>
       <requestFiltering>
