--- a/NedBankManager/NedBankManager.csproj
+++ b/NedBankManager/NedBankManager.csproj
@@ -64,6 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InvestmentManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CustomerManager.cs" />
   </ItemGroup>
