--- a/NedbankRepository/NedbankRepository.csproj
+++ b/NedbankRepository/NedbankRepository.csproj
@@ -235,6 +235,7 @@
       <DependentUpon>NedbankDataContext.tt</DependentUpon>
     </Compile>
     <Compile Include="IRepository\ICustomerRepository.cs" />
+    <Compile Include="IRepository\IInvestmentRepository.cs" />
     <Compile Include="MultiTenantUserAccessMap.cs">
       <DependentUpon>NedbankDataContext.tt</DependentUpon>
     </Compile>
@@ -312,6 +313,7 @@
       <DependentUpon>NedbankDataContext.tt</DependentUpon>
     </Compile>
     <Compile Include="SQLRepository\SQLCustomerRepository.cs" />
+    <Compile Include="SQLRepository\SQLInvestmentRepository.cs" />
     <Compile Include="State.cs">
       <DependentUpon>NedbankDataContext.tt</DependentUpon>
     </Compile>
