--- a/NedbankModel/NedbankModel.csproj
+++ b/NedbankModel/NedbankModel.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Common\ModelConstant.cs" />
     <Compile Include="InvestmentPottfolio.cs" />
+    <Compile Include="InvestorPerformance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CustomerInformation.cs" />
   </ItemGroup>
