--- a/NedbankAPI/Web.config
+++ b/NedbankAPI/Web.config
@@ -14,6 +14,7 @@
     <!--<add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_008;Initial Catalog=NIS;User ID=nis_admin;Password=Websym@123" />-->
     <!-- for QA Server -->
     <add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />
+	<add name="NedbankEntities" connectionString="metadata=res://*/NedBankDataContext.csdl|res://*/NedBankDataContext.ssdl|res://*/NedBankDataContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=nis.database.windows.net;initial catalog=NIS;persist security info=True;user id=websym;password=Admin@123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--<add name="TenantManagerConnectionString" connectionString="{{DataBaseConnectionString}}" />-->
     <!-- for PRD Server -->
     <!--<add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=nisProd;User ID=nis_admin;Password=Gauch022$" />-->
