--- a/NedBankException/NedBankException.csproj
+++ b/NedBankException/NedBankException.csproj
@@ -44,6 +44,8 @@
     <Compile Include="ConnectionStringNotFoundException.cs" />
     <Compile Include="Constants\ExceptionConstant.cs" />
     <Compile Include="InvalidTenantException.cs" />
+    <Compile Include="Language\LanguageAlreadyExistsException.cs" />
+    <Compile Include="Language\LanguageNotFoundException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryStoreNotAccessibleException.cs" />
     <Compile Include="TenantNotFoundException.cs" />
