--- a/NedbankModel/NedbankModel.csproj
+++ b/NedbankModel/NedbankModel.csproj
@@ -47,6 +47,7 @@
     <Compile Include="InvestmentPottfolio.cs" />
     <Compile Include="InvestmentTransaction.cs" />
     <Compile Include="InvestorPerformance.cs" />
+    <Compile Include="LanguageTenant.cs" />
     <Compile Include="Language.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CustomerInformation.cs" />
