--- a/App/ClientApp/angular.json
+++ b/App/ClientApp/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "320cab11-a859-487d-94f0-7f638d83f53e"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
