--- a/API/Web.config
+++ b/API/Web.config
@@ -15,8 +15,9 @@
     <!--<add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_008;Initial Catalog=NIS;User ID=nis_admin;Password=Websym@123" />-->
 
     <!-- for QA Server -->
-    <add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />
-
+    <add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" providerName="System.Data.SqlClient" />
+    <add name="NedbankEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    
     <!--<add name="TenantManagerConnectionString" connectionString="{{DataBaseConnectionString}}" />-->
 
     <!-- for PRD Server -->
