--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Search Parameter\WidgetSearchParameter.cs" />
     <Compile Include="Search Parameter\RoleSearchParameter.cs" />
     <Compile Include="Search Parameter\UserSearchParameter.cs" />
+    <Compile Include="Segment.cs" />
     <Compile Include="State.cs" />
     <Compile Include="StatementMetadataArchive.cs" />
     <Compile Include="StatementPreviewData.cs" />
