--- a/API/Web.config
+++ b/API/Web.config
@@ -12,11 +12,11 @@
   <connectionStrings>
 
     <!-- for Local Server -->
-    <!--<add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_008;Initial Catalog=NIS;User ID=nis_admin;Password=Websym@123" />-->
+    <!--<add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_008;Initial Catalog=NIS_DEV;User ID=nis_admin;Password=Websym@123" />-->
 
     <!-- for QA Server -->
-    <add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" providerName="System.Data.SqlClient" />
-    <add name="NedbankEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS_DEV;User ID=websym;Password=Admin@123" providerName="System.Data.SqlClient" />
+    <add name="NedbankEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=nis.database.windows.net;Initial Catalog=NIS_DEV;User ID=websym;Password=Admin@123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     
     <!--<add name="TenantManagerConnectionString" connectionString="{{DataBaseConnectionString}}" />-->
 
@@ -56,12 +56,12 @@
     <!--Teanant setup  -->
 
     <!-- for Local Server -->
-    <!--<add key="TenantSQLStorageAccount" value="Data Source=WSPL_LAP_008;Initial Catalog=NIS;User ID=nis_admin;Password=Websym@123" />-->
+    <!--<add key="TenantSQLStorageAccount" value="Data Source=WSPL_LAP_008;Initial Catalog=NIS_DEV;User ID=nis_admin;Password=Websym@123" />-->
 
     <!--<add key="TenantSQLStorageAccount" value="{{DataBaseConnectionString}}" />-->
 
     <!-- for QA Server -->
-    <add key="TenantSQLStorageAccount" value="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />
+    <add key="TenantSQLStorageAccount" value="Data Source=nis.database.windows.net;Initial Catalog=NIS_DEV;User ID=websym;Password=Admin@123" />
 
     <!-- for PRD Server -->
     <!--<add key="TenantSQLStorageAccount" value="Data Source=nis.database.windows.net;Initial Catalog=nisProd;User ID=nis_admin;Password=Gauch022$" />-->
