2319: put real data instead of json for the statement

--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -442,6 +442,10 @@
       <Project>{0de03c69-31fa-40cc-a2a3-de671ef011dd}</Project>
       <Name>Model</Name>
     </ProjectReference>
+    <ProjectReference Include="..\NedbankRepository\NedbankRepository.csproj">
+      <Project>{353F08EF-0AF6-43CF-9276-309973AB9212}</Project>
+      <Name>NedbankRepository</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Utility\Utility.csproj">
       <Project>{8c2d7fe4-c754-46d8-a590-3981eff6bad8}</Project>
       <Name>Utility</Name>
