--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -114,6 +114,10 @@
       <Project>{0de03c69-31fa-40cc-a2a3-de671ef011dd}</Project>
       <Name>Model</Name>
     </ProjectReference>
+    <ProjectReference Include="..\NedbankModel\NedbankModel.csproj">
+      <Project>{19ee7e7c-40ce-4fd3-98cf-1f1f31aae8b5}</Project>
+      <Name>NedbankModel</Name>
+    </ProjectReference>
     <ProjectReference Include="..\NedbankRepository\NedbankRepository.csproj">
       <Project>{353F08EF-0AF6-43CF-9276-309973AB9212}</Project>
       <Name>NedbankRepository</Name>
