--- a/NedBankUtility/NedBankUtility.csproj
+++ b/NedBankUtility/NedBankUtility.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{6C23AA0C-75E6-48A8-8693-2FA6719E7CE7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>nIS</RootNamespace>
-    <AssemblyName>nIS.Utility</AssemblyName>
+    <RootNamespace>NedBankUtility</RootNamespace>
+    <AssemblyName>NedBankUtility</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
